Bug 56825 - [GM45 SNA] Rendering corruption in Opera 12 on Ubuntu 12.10
Summary: [GM45 SNA] Rendering corruption in Opera 12 on Ubuntu 12.10
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-06 22:17 UTC by Svindler
Modified: 2012-12-09 12:49 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log file 1 (33.40 KB, text/plain)
2012-11-07 16:15 UTC, Svindler
no flags Details
Xorg.0.log File 2 (35.80 KB, text/plain)
2012-11-07 16:16 UTC, Svindler
no flags Details
Opera Flash corruption on YouTube (465.43 KB, image/png)
2012-11-13 22:39 UTC, Svindler
no flags Details

Description Svindler 2012-11-06 22:17:56 UTC
Hello, this is my first bug submission here, so I apologize in advance for screwing anything up.

The three screenshots at [http://imgur.com/a/15HSI] show my rendering corruption issues with Opera 12.10 on fully updated Ubuntu 12.10 (kernel v3.6, AMD64). I am using xorg-edgers PPA with SNA enabled.

My system specs are as follows:
Intel Core2Duo P8400
Intel GMA X4500MHD
4GB DDR2

I also use Firefox and Chromium which work well for the most part. Chromium has a small rendering corruption issue in the tab bars where text sometimes fades/disappears and reappears intermittently. In Firefox (Nightly v19.0a1), sometimes the addressbar disappears, and reappears on mouseover. Unlike these two however, Opera is near unusable.

Please let me know if you need any more information.
Comment 1 Svindler 2012-11-06 22:23:51 UTC
I forgot to include the version information:
2:2.20.12+git20121101.72bcd8f8-0ubuntu0sarvatt
Comment 2 Chris Wilson 2012-11-07 08:45:27 UTC
Can you please attach your Xorg.log?

The firefox and chromium issue I should have improved last night, https://bugs.freedesktop.org/show_bug.cgi?id=55500, but the Opera bug looks different.
Comment 3 Svindler 2012-11-07 16:15:49 UTC
Created attachment 69664 [details]
Xorg.0.log file 1
Comment 4 Svindler 2012-11-07 16:16:30 UTC
Created attachment 69665 [details]
Xorg.0.log File 2
Comment 5 Svindler 2012-11-13 22:38:00 UTC
The newest updates from xorg-edgers PPA seem to have made a huge difference in Opera usability. However, we are not completely out of the woods; certain pages with Flash content (YouTube and some others but NOT Vimeo) still have issues. I am attaching a screenshot that shows the YouTube flash player controls aren't rendered properly. I am using the latest Flashplayer.

The video also flickers a LOT when:
a. I am simply moving the mouse cursor around on the page
b. I type something in Opera's addressbar or any text field on the page

Please let me know if any more information is required. Thank you for your work.
Comment 6 Svindler 2012-11-13 22:39:12 UTC
Created attachment 70040 [details]
Opera Flash corruption on YouTube

Check the video player controls area in the screenshot
Comment 7 Chris Wilson 2012-11-14 08:47:15 UTC
I haven't managed to reproduce this, nor the original corruption. Can you please try compiling the ddx (xserver-xorg-video-intel http://cgit.freedesktop.org/xorg/driver/xf86-video-intel) with --enable-debug=full and seeing if that then catches the error with an assertion.
Comment 8 Chris Wilson 2012-12-03 11:15:45 UTC
Major rejigging of gen4 acceleration, though it should have been unrelated to this corruption (especially as I have yet to reproduce anything like that), so please do retest.
Comment 9 Chris Wilson 2012-12-09 12:49:23 UTC
I believe that I've found the most likely cause for your bug:

commit 25c0d440dee45c03f5e45b8e0e45071c0c32f507
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Dec 9 12:11:53 2012 +0000

    sna: Move source to CPU prior to referencing for inplace trapezoids
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=56825
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.