sna: Move source to CPU prior to referencing for inplace trapezoids

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=56825
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>